<resources>
    <plurals name="insert_issue__title">
        <item quantity="one">Issue %1$s</item>
        <item quantity="two">Issue %1$s and %2$d other</item>
        <item quantity="other">Issue %1$s and %2$d others</item>
    </plurals>
    <plurals name="issues_to_read">
        <item quantity="one">%d issue to read</item>
        <item quantity="other">%d issues to read</item>
    </plurals>
    <string name="filter_to_read">My to-read list</string>
    <plurals name="new_stories">
        <item quantity="one">%d new story</item>
        <item quantity="other">%d new stories</item>
    </plurals>
    <string name="add_copy">Add a copy</string>
    <string name="add_cover">Click on the cover\nto add it to your collection</string>
    <string name="add_cover_error_file_too_big">The picture is too big, please try again.</string>
    <string name="add_cover_no_results">No cover matches your photo, please try again.</string>
    <string name="all_countries">All countries</string>
    <string name="app_name" translatable="false">What The Duck</string>
    <string name="bookcase_view_message">Displaying the bookcase view when on a mobile network can lead to a high data consumption. Do you still want to display it?</string>
    <string name="bookcase_view_title">Bookcase view</string>
    <string name="by_cover_file">By cover file</string>
    <string name="by_cover_photo">By cover photo</string>
    <string name="by_issue_selection">By issue selection</string>
    <string name="by_story_title">By story title</string>
    <string name="cancel">Cancel</string>
    <string name="change_photo_crop">Change the photo cropping</string>
    <string name="collection">My collection</string>
    <string name="collection_progression">Collection progression</string>
    <string name="collection_size">Collection size</string>
    <string name="condition">Condition</string>
    <string name="condition_bad">Bad condition</string>
    <string name="condition_good">Good condition</string>
    <string name="condition_missing">Missing issue</string>
    <string name="condition_none">Unspecified condition</string>
    <string name="condition_notsogood">Not-so-good condition</string>
    <string name="confirmation_message__collection_updated">Your collection has been updated</string>
    <string name="copy_title">Copy %d</string>
    <string name="countries">countries</string>
    <string name="countries_singular">country</string>
    <string name="country">Country</string>
    <string name="cover_suggestion">Cover suggestion</string>
    <string name="coversearch_result_template" translatable="false">%1$s %2$d/%3$d</string>
    <string name="create">Create</string>
    <string name="create_new_purchase_date">Create new purchase date</string>
    <string name="delete_rating">Delete</string>
    <string name="discord" translatable="false">Discord</string>
    <string name="edge_missing_explanation">Some of the magazines below don\'t have a proper edge because we don\'t have a photo of them. Tap on one of these edges to send us a photo and earn points!</string>
    <string name="edge_view">Bookcase</string>
    <string name="edit">Edit</string>
    <string name="email_address">E-mail</string>
    <string name="error">Error</string>
    <string name="error__cannot_create_upload_file">Cannot create upload file from bitmap</string>
    <string name="error__cannot_edit_issues_with_and_without_copies_at_same_time">You cannot modify at the same time issues that you own several copies of and issues that you have a single copy of</string>
    <string name="error__cannot_login">Loading your DucksManager account failed, check that your Internet connection is active. You will be able to browse through your collection while offline once your collection is synchronized.</string>
    <string name="error__could_not_create_empty_file">Could not create empty file for the camera</string>
    <string name="error__malformed_url">The URL is malformed</string>
    <string name="error_height_restrictions">The height of the edge must be between 100 and 350 millimeters</string>
    <string name="error_invalid_number_format">Please enter valid numbers in the width and height fields!</string>
    <string name="error_sending_edge">An error occurred when sending the edge</string>
    <string name="error_width_is_bigger_than_height">The width of your selection must be smaller than its height</string>
    <string name="error_width_restrictions">The width of the edge must be between 5 and 50 millimeters</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="favorite_authors">My favorite authors</string>
    <string name="filter">Filter</string>
    <string name="filter_all_collection">Whole collection</string>
    <string name="from_recent_issue">From a recent issue</string>
    <string name="height">Height:</string>
    <string name="highest_quoted_issue">Highest quoted issue:</string>
    <string name="i_have_cropped_the_photo">I have cropped the photo</string>
    <string name="in_this_condition">In this condition</string>
    <string name="in_to_read_list">In to-read stack</string>
    <string name="including1Copy">incl. %d copy</string>
    <string name="includingXCopies">incl. %d copies</string>
    <string name="input_error">Input error</string>
    <string name="input_error__author_already_rated">You have already rated this author!</string>
    <string name="input_error__empty_credentials">You need to enter your credentials to continue</string>
    <string name="input_error__invalid_credentials">Invalid credentials</string>
    <string name="input_error__no_issue_selected">Select at least one issue</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="internal_error">Internal error</string>
    <string name="internal_error__crypting_failed">The encryption of your credentials failed</string>
    <string name="internal_error__empty_list">Empty list</string>
    <string name="internal_error__issue_insertion_failed">Adding the issue in your collection failed</string>
    <string name="internal_error__malformed_list">The list is malformed, please try again later</string>
    <string name="internal_error__purchase_creation_failed">The creation of the purchase date failed</string>
    <string name="invalid_selection">Invalid selection</string>
    <string name="issue_already_possessed">You already have this issue in your collection</string>
    <string name="issue_conditions">Issue conditions</string>
    <string name="issue_list_copied">The list has been copied to your clipboard.</string>
    <string name="issue_list_copy_missing">Copy missing issues</string>
    <string name="issue_list_copy_missing_title">Missing issues for&#160;</string>
    <string name="issue_list_copy_possessed">Copy possessed issues</string>
    <string name="issue_list_copy_possessed_title">Possessed issues for&#160;</string>
    <string name="issue_no_cover">Issue %1s (no cover)</string>
    <string name="issue_selection_tip">Select an issue by tapping on it.\nSelect a range of issues by long-tapping on the first item of the range.</string>
    <string name="issues">issues</string>
    <string name="issues_singular">issue</string>
    <string name="item_description">Description</string>
    <string name="itemtitle">Item</string>
    <string name="link_to_ducksmanager_website">What The Duck is the mobile app of DucksManager. Click here to access the DucksManager website.</string>
    <string name="list_view">List</string>
    <string name="loading_collection">Loading your collection…</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="long_tap_to_end_issue_range_selection">Long-tap on the last issue of your range</string>
    <string name="max_copies_info">You can specify a maximum of 3 copies for each issue</string>
    <string name="max_watched_authors_reached">You have reached the maximum number of authors to rate. Remove already watched authors if you want to rate a new one.</string>
    <string name="medal_incentive_1">Send us photos of this book\'s edge</string>
    <string name="medal_incentive_2">and earn %1$d photographer points!</string>
    <string name="my_collection">My collection (%d issues)</string>
    <string name="network_error">Network error</string>
    <string name="network_error__no_connection">Network issue: please check your Internet connection</string>
    <string name="new_feature">New features in the WhatTheDuck app</string>
    <string name="new_features_28_text">You can now add multiple copies of the same issue in your collection!</string>
    <string name="new_version_available">A new version of What The Duck is available !\nClick here to update the app</string>
    <string name="no_author">You don\'t have any favorite authors</string>
    <string name="no_issue">No issue</string>
    <string name="no_item">No issue in this list. Click on the 🖊️ icon to add issues to your collection!</string>
    <string name="no_item_in_to_read_list">You don\'t have any issue to read. Set an existing issue as \"In to-read list\" to show it here.</string>
    <string name="no_purchase_date">No purchase date</string>
    <string name="no_suggestion">We don\'t have any suggestion for you. Make sure that you rated your favorite authors.\nThe suggestions are updated daily.</string>
    <string name="no_title">No title</string>
    <string name="notify_option">Notify me when new stories from my favorite authors come out</string>
    <string name="number_of_users_own_issue">%d users own this issue</string>
    <string name="offline_mode">You are using offline mode. You can browse through your collection but not update it. Some features will not be available.</string>
    <string name="offline_mode_cannot_login">What The Duck couldn\'t retrieve your collection. Are you connected to the Internet?</string>
    <string name="offline_mode_cannot_view">This view is not available in offline mode. Click here to go back to the collection view</string>
    <string name="ok" translatable="false">OK</string>
    <string name="option_notified_countries">Suggest me issues released in the following countries:</string>
    <string name="other">Other</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="publications">publications</string>
    <string name="publications_singular">publication</string>
    <string name="purchase_date">Purchase date</string>
    <string name="purchase_name">Purchase name</string>
    <string name="rate_description">Add your favorite authors and rate them according to your preferences.\nThanks to these ratings, What The Duck can suggest you issues to hunt for.\nThese suggestions are updated daily.</string>
    <string name="rate_new_author">Rate an author</string>
    <string name="rate_new_author_hint">Type an author name</string>
    <string name="reset_password_description">Fill in your e-mail address to reset your password.</string>
    <string name="search">Find a story</string>
    <string name="search_hint">Type the title of a story</string>
    <string name="search_intro">Type the title of a story. What The Duck will show you the magazines that contain this story and will indicate which stories and issues you have in your collection.</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="signup">Signup</string>
    <string name="signup_end">Finish signup</string>
    <string name="sort_by_publication_date">Sort by publication date</string>
    <string name="sort_by_score">Sort by score</string>
    <string name="stats">Stats</string>
    <string name="story_was_published_in">was published in the following issues:</string>
    <string name="suggestions">Suggestions</string>
    <string name="username">Username</string>
</resources>