<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_collection"
            android:title="@string/collection"
            android:icon="@drawable/ic_list"
            app:showAsAction="never"/>

        <item android:id="@+id/action_favorite_authors"
            android:title="@string/favorite_authors"
            android:icon="@drawable/ic_star"
            app:showAsAction="never"/>

        <item android:id="@+id/action_stats"
            android:title="@string/stats"
            android:icon="@drawable/ic_view_edge"
            app:showAsAction="never"/>

        <item android:id="@+id/action_suggestions"
            android:title="@string/suggestions"
            android:icon="@drawable/ic_fire"
            app:showAsAction="never"/>

        <item android:id="@+id/action_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_cog"
            app:showAsAction="never"/>
    </group>
</menu>