<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/suggestions" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">

        <TextView
            android:id="@+id/suggestionsIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="WhatTheDuck suggests a list of magazines that you could be interested in, based on your favorite authors and the stories of these authors that you don't already have.\nYou can change what countries to show in the Settings screen."
            app:lineHeight="20dp" />

        <ToggleButton
            android:id="@+id/sort"
            android:layout_below="@+id/suggestionsIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:textOff="@string/sort_by_score"
            android:textOn="@string/sort_by_publication_date" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sort"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suggestionList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="26dp"
                tools:listitem="@layout/row_suggested_issue"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:layout_centerInParent="true"
                android:visibility="visible" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>